minor overflow issue resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
+  overflow: auto;
+  height: 100%;
   /* font-family: Arial, Helvetica, sans-serif; */
 }
 
